Fix spacing on map display

--- a/frontend/src/assets/stylesheets/map.css
+++ b/frontend/src/assets/stylesheets/map.css
@@ -8,3 +8,10 @@
     margin: 0;
     padding: 0;
   }
+
+.map-display-container {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
